--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,9 @@ name: heroku-deploy
 on:
     push:
         branches: develop
-
 jobs:
     build:
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v2
             - uses: akhileshns/heroku-deploy@v3.4.6
@@ -15,6 +13,5 @@ jobs:
                   heroku_api_key: ${{secrets.HEROKU_API_KEY}}
                   heroku_app_name: 'skool-development-frontend'
                   heroku_email: 'geoffreywesthoff@gmail.com'
-
-            - name: Run a one-line script
-              run: echo successfully run
+                  branch: 'develop'
+                  procfile: 'web: npm start'
