Potential script fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
                   heroku_app_name: 'skool-development-frontend'
                   heroku_email: 'geoffreywesthoff@gmail.com'
                   branch: 'develop'
-                  procfile: 'web: npm start'
+                  procfile: 'web: bin/boot'
