Update github action to build both dev and main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,28 @@ name: heroku-deploy
 
 on:
     push:
-        branches: develop
+        branches: 
+        - develop
+        - main
 jobs:
     build:
         runs-on: ubuntu-latest
+        
         steps:
+            - uses: haya14busa/action-cond@v1
+              id: condval
+              with:
+                cond: ${{ GITHUB_REF##*/ == 'main' }}
+                if_true: "skool-stable-frontend"
+                if_false: "skool-development-frontend"
             - uses: actions/checkout@v2
             - uses: akhileshns/heroku-deploy@v3.12.12
+              if: ${GITHUB_REF##*/} == 'develop'
               with:
                   heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-                  heroku_app_name: 'skool-development-frontend'
+                  heroku_app_name: ${ {steps.condval.outputs.value }}
+
                   heroku_email: 'geoffreywesthoff@gmail.com'
-                  branch: 'develop'
+                  branch: ${GITHUB_REF##*/}
                   procfile: 'web: bin/boot'
+              
