--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,11 @@ jobs:
             - uses: haya14busa/action-cond@v1
               id: condval
               with:
-                cond: ${{ GITHUB_REF##*/ == 'main' }}
+                cond: ${{ ${GITHUB_REF##*/} == 'main' }}
                 if_true: "skool-stable-frontend"
                 if_false: "skool-development-frontend"
             - uses: actions/checkout@v2
             - uses: akhileshns/heroku-deploy@v3.12.12
-              if: ${GITHUB_REF##*/} == 'develop'
               with:
                   heroku_api_key: ${{secrets.HEROKU_API_KEY}}
                   heroku_app_name: ${ {steps.condval.outputs.value }}
