--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^17.0.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
+        "date-fns": "^2.28.0",
         "formik": "^2.2.9",
         "luxon": "^2.4.0",
         "react": "^18.1.0",
