--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
             - uses: haya14busa/action-cond@v1
               id: condval
               with:
-                cond: ${{ github.ref == 'refs/heads/main' }}
+                cond: ${{ github.ref == 'refs/head/main' }}
                 if_true: "skool-stable-frontend"
                 if_false: "skool-development-frontend"
             - uses: actions/checkout@v2
