--- a/package.json
+++ b/package.json
@@ -13,18 +13,29 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^14.2.0",
+        "@tinymce/tinymce-react": "^4.1.0",
         "@types/jest": "^27.5.1",
         "@types/node": "^17.0.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
         "bson-objectid": "^2.0.3",
         "date-fns": "^2.28.0",
+        "draft-js": "^0.11.7",
+        "draft-js-wysiwyg": "^1.2.1",
+        "draftjs-to-html": "^0.9.1",
         "formik": "^2.2.9",
+        "html-to-draftjs": "^1.5.0",
+        "mui-rte": "^1.28.0",
+        "quill": "^1.3.6",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-quill": "^1.3.5",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "slate": "^0.81.0",
+        "slate-react": "^0.81.0",
+        "tinymce": "^6.0.3",
         "typescript": "^4.7.2",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11",
